カラム名日本語に変更

--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -12,28 +12,28 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.label :物件名 %>
+    <%= form.text_field :物件名 %>
   </div>
 
   <div class="field">
-    <%= form.label :rent %>
-    <%= form.number_field :rent %>
+    <%= form.label :賃料 %>
+    <%= form.number_field :賃料 %> 円
   </div>
 
   <div class="field">
-    <%= form.label :address %>
-    <%= form.text_field :address %>
+    <%= form.label :住所 %>
+    <%= form.text_field :住所 %>
   </div>
 
   <div class="field">
-    <%= form.label :age %>
-    <%= form.number_field :age %>
+    <%= form.label :築年数 %>
+    <%= form.number_field :築年数 %> 年
   </div>
 
   <div class="field">
-    <%= form.label :remarks %>
-    <%= form.text_area :remarks %>
+    <%= form.label :備考 %>
+    <%= form.text_area :備考 %>
   </div>
 
   <div class="actions">
